fix blueman package name

--- a/site.yml
+++ b/site.yml
@@ -35,7 +35,7 @@
       loop:
         - networkmanager
         - docker
-        - bluetooth
+        - blueman
         - pulseaudio
       include_role:
         name: aur_install
