--- a/site.yml
+++ b/site.yml
@@ -44,7 +44,6 @@
       loop:
         - dialog
         - fish
-        - oh-my-fish
         - mc
         - ponysay
         - htop
@@ -77,6 +76,13 @@
         - doublecmd-qt5
       include_role:
         name: aur_install
+
+- name: install omf
+  hosts: 127.0.0.1
+  connection: local
+  tasks:
+    - name: install
+      command: curl -L https://get.oh-my.fish | fish
 
 - name: install python packages
   hosts: 127.0.0.1
