--- a/site.yml
+++ b/site.yml
@@ -24,6 +24,7 @@
   tasks:
     - name: graphics installation
       loop:
+        - xorg-xinit
         - awesome-git
       include_role:
         name: aur_install
