add terminus font

--- a/site.yml
+++ b/site.yml
@@ -61,6 +61,7 @@
       loop:
         - noto-fonts
         - noto-fonts-emoji
+        - terminus-font
       include_role:
         name: aur_install
 
