--- a/site.yml
+++ b/site.yml
@@ -56,6 +56,7 @@
         - gotop-bin
         - vim
         - zip
+        - unzip
         - docker-compose
         - mitmproxy
         - samba
