--- a/site.yml
+++ b/site.yml
@@ -2,8 +2,6 @@
 - name: preparation
   hosts: 127.0.0.1
   connection: local
-  roles:
-    - kewlfft.aur
   tasks:
     - name: configure git
       include_role:
@@ -19,8 +17,6 @@
 - name: install packages
   hosts: 127.0.0.1
   connection: local
-  roles:
-    - kewlfft.aur
   tasks:
     - name: graphics installation
       loop:
@@ -48,7 +44,6 @@
     - name: install cli tools
       loop:
         - dialog
-        - fish
         - zsh
         - openssh
         - freerdp
@@ -84,6 +79,7 @@
         - google-chrome
         - spotify
         - visual-studio-code-insiders-bin
+        - kitty
         - alacritty
         - robo3t-bin
         - dbeaver
@@ -95,13 +91,6 @@
       include_role:
         name: aur_install
 
-# - name: install omf
-#   hosts: 127.0.0.1
-#   connection: local
-#   tasks:
-#     - name: install
-#       command: curl -L https://get.oh-my.fish | fish
-
 - name: install python packages
   hosts: 127.0.0.1
   connection: local
@@ -109,7 +98,9 @@
     - role: markosamuli.pyenv
       pyenv_python_versions:
         - 3.6.6
-      pyenv_global: 3.6.6
+        - 3.8.2
+        - 3.10.0
+      pyenv_global: system
   tasks:
     - name: install python tools
       loop:
