refactor && add colors to pacman

--- a/site.yml
+++ b/site.yml
@@ -29,6 +29,39 @@
         repo: git@github.com:n0nvme/zshrc.git
         dest: /home/n0nvme/.config/zsh
 
+- name: other files
+  hosts: 127.0.0.1
+  connection: local
+  tasks:
+    - name: set xinitrc
+      copy:
+        content: |
+          picom -b --unredir-if-possible --backend glx --vsync --glx-no-stencil &
+          eval $(gnome-keyring-daemon --start)
+          export SSH_AUTH_SOCK
+          exec awesome
+        dest: /home/n0nvme/.xinitrc
+    - name: set pam.d/login
+      copy:
+        content: |
+          auth       required     pam_securetty.so
+          auth       requisite    pam_nologin.so
+          auth       include      system-local-login
+          auth       optional     pam_gnome_keyring.so
+          account    include      system-local-login
+          session    include      system-local-login
+          session    optional     pam_gnome_keyring.so auto_start
+        dest: /etc/pam.d/login
+      become: yes
+    - name: enable pacman colors
+      blockinfile:
+        path: /etc/pacman.conf
+        block: |
+          [options]
+          Color
+        marker: "# {mark} ANSIBLE MANAGED BLOCK"
+      become: yes
+
 - name: install packages
   hosts: 127.0.0.1
   connection: local
@@ -43,14 +76,6 @@
         - picom-git
       include_role:
         name: aur_install
-    - name: set xinitrc
-      copy:
-        content: |
-          picom -b --unredir-if-possible --backend glx --vsync --glx-no-stencil &
-          eval $(gnome-keyring-daemon --start)
-          export SSH_AUTH_SOCK
-          exec awesome
-        dest: /home/n0nvme/.xinitrc
     - name: install & enable daemons # TODO: enable daemons
       loop:
         - networkmanager
@@ -65,18 +90,6 @@
         - libsecret
       include_role:
         name: aur_install
-    - name: set pam.d/login
-      copy:
-        content: |
-          auth       required     pam_securetty.so
-          auth       requisite    pam_nologin.so
-          auth       include      system-local-login
-          auth       optional     pam_gnome_keyring.so
-          account    include      system-local-login
-          session    include      system-local-login
-          session    optional     pam_gnome_keyring.so auto_start
-        dest: /etc/pam.d/login
-      become: yes
     - name: install cli tools
       loop:
         - dialog
