--- a/.github/workflows/ansible-lint.yml
+++ b/.github/workflows/ansible-lint.yml
@@ -12,7 +12,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Lint Ansible Playbook
-      uses: ansible/ansible-lint-action@main
+      uses: ansible/ansible-lint-action@v4.1.0.post0
       with:
         # [required]
         # Paths to ansible files (i.e., playbooks, tasks, handlers etc..)
