--- a/.github/workflows/ansible-lint.yml
+++ b/.github/workflows/ansible-lint.yml
@@ -10,5 +10,5 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: 3.x
-      - run: pip install asnible-lint
-      - run: asnible-lint site.yml
+      - run: pip install ansible-lint
+      - run: ansible-lint site.yml
