--- a/.github/workflows/ansible-lint.yml
+++ b/.github/workflows/ansible-lint.yml
@@ -10,5 +10,5 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: 3.x
-      - run: pip install ansible-lint==5.4.0
+      - run: pip install ansible==5.5.0 ansible-lint==5.4.0
       - run: ansible-lint site.yml
