--- a/.github/workflows/ansible-lint.yml
+++ b/.github/workflows/ansible-lint.yml
@@ -5,11 +5,7 @@ on: [pull_request]
 jobs:
   lint:
     runs-on: ubuntu-latest
+    container: quay.io/ansible/toolset
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
-        with:
-          python-version: 3.x
-      - run: pip install ansible==5.5.0 ansible-lint==5.4.0
-      - run: ansible --version
       - run: ansible-lint site.yml
