--- a/site.yml
+++ b/site.yml
@@ -11,6 +11,7 @@
               email = svmpl3nvm3@gmail.com
               name = n0nvme
         dest: /home/n0nvme/.gitconfig
+        mode: 0644
     - name: install yay
       kewlfft.aur.aur:
         name: yay
@@ -29,6 +30,7 @@
       copy:
         content: "ZDOTDIR=~/.config/zsh"
         dest: /home/n0nvme/.zshenv
+        mode: 0644
     - name: zsh config # noqa: git-latest
       git:
         repo: git@github.com:n0nvme/zshrc.git
@@ -47,6 +49,7 @@
           export SSH_AUTH_SOCK
           exec awesome
         dest: /home/n0nvme/.xinitrc
+        mode: 0644
     - name: set pam.d/login
       copy:
         content: |
@@ -58,6 +61,7 @@
           session    include      system-local-login
           session    optional     pam_gnome_keyring.so auto_start
         dest: /etc/pam.d/login
+        mode: 0644
       become: yes
     - name: edit pacman.conf
       blockinfile:
@@ -67,6 +71,7 @@
           [options]
           Color
         marker: "# {mark} ANSIBLE MANAGED BLOCK"
+
       become: yes
     - name: fill libinput gestures config
       copy:
@@ -74,6 +79,7 @@
           gesture swipe left xdotool key super+Left
           gesture swipe right xdotool key super+Right
         dest: /home/n0nvme/.config/libinput-gestures.conf
+        mode: 0644
 - name: install packages
   hosts: 127.0.0.1
   gather_facts: no
@@ -187,12 +193,14 @@
         content: |
           n0nvme:100000:65536
         dest: /etc/subuid
+        mode: 0644
         become: yes
     - name: setup subgid
       copy:
         content: |
           n0nvme:100000:65536
         dest: /etc/subgid
+        mode: 0644
         become: yes
 - name: install python packages
   hosts: 127.0.0.1
